update get all games
