# src/utils/swagger.yaml
@@ -111,8 +111,6 @@ paths:
         - Game
       summary: Get game by ID
       description: "Returns the information of the game with the provided game ID."
-      security:
-        - BearerAuth: []
       parameters:
         - in: path
           name: gameId
@@ -263,90 +261,14 @@ paths:
                     type: string
               example:
                 message: "Error fetching game"
-      summary: Get game by ID
-      tags:
-        - Game
-      parameters:
-        - in: path
-          name: gameId 
-          required: true
-          schema:
-            type: integer
-            minimum: 1
-          description: The game ID to get
-      responses:
-        '200':
-          description: Game found
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                    teams:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          _id:
-                            type: string
-                          teamName:
-                            type: string
-                          players:
-                            type: array
-                            items:
-                              type: string
-                          score:
-                            type: integer
-                          createdAt:
-                            type: string
-                            format: date-time
-                          updatedAt:
-                            type: string
-                            format: date-time
-                          __v:
-                            type: integer
-                    rounds:
-                      type: integer
-                    currentRound:
-                      type: integer
-                    status:
-                      type: string
-                    currentTurnTeam:
-                      type: string
-                    currentDescriber:
-                      type: string
-                    currentWord:
-                      type: string
-                    similarWords:
-                      type: array
-                      items:
-                        type: string
-                    correctGuesses:
-                      type: integer
-                    createdAt:
-                      type: string
-                      format: date-time
-                    updatedAt:
-                      type: string
-                      format: date-time
-                    __v:
-                      type: integer
-        '404':
-          description: Game not found
-        '500':
-          description: Internal server error - Error fetching game   
+      security:
+        - bearerAuth: []  
       
     delete:
       tags:
         - Game
       summary: Delete game by ID
       description: "Deletes the game specified by the game ID in the parameters."
-      security:
-        - BearerAuth: []
       parameters:
         - in: path
           name: gameId
@@ -410,6 +332,8 @@ paths:
                     type: string
               example:
                 error: "Failed to delete game"
+      security:
+        - bearerAuth: []          
 
   /games/create:
     post:
@@ -535,6 +459,93 @@ paths:
                 message: "Failed to create game"
       security:
         - bearerAuth: []
+
+  /games:
+    get:
+      tags:
+        - Game
+      summary: Get all games
+      description: "Retrieve all games, regardless of their status."
+      responses:
+        '200':
+          description: "Games successfully retrieved"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    teams:
+                      type: array
+                      items:
+                        type: string
+                    status:
+                      type: string
+                    currentTurnTeam:
+                      type: string
+                    currentDescriber:
+                      type: string
+                    currentWord:
+                      type: string
+                    createdAt:
+                      type: string
+                      format: date-time
+              example:
+                - _id: "670ae1e48a25eea8a5b7335c"
+                  teams:
+                    - "670ae1e38a25eea8a5b73358"
+                    - "670ae1e38a25eea8a5b7335a"
+                  status: "waiting"
+                  currentTurnTeam: "670ae1e38a25eea8a5b73358"
+                  currentDescriber: "670ae0318a25eea8a5b73354"
+                  currentWord: "ability"
+                  createdAt: "2024-10-12T20:53:56.037Z"
+                - _id: "670ae4798a25eea8a5b73367"
+                  teams:
+                    - "670ae4798a25eea8a5b73363"
+                    - "670ae4798a25eea8a5b73365"
+                  status: "waiting"
+                  currentTurnTeam: "670ae4798a25eea8a5b73363"
+                  currentDescriber: "670ae0318a25eea8a5b73360"
+                  currentWord: "clock"
+                  createdAt: "2024-10-12T21:04:57.728Z"
+        '401':
+          description: "Unauthorized - missing or invalid JWT"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+              example:
+                message: "Authorization header missing."
+        '403':
+          description: "Forbidden - administrator role required"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+              example:
+                message: "Access denied, administrator role required"
+        '500':
+          description: "Internal server error - failed to retrieve games"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+              example:
+                error: "Failed to retrieve games"
+      security: [ { bearerAuth: [] } ]
 
   /teams/:
     post:
